--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
     <h2>Why would we ever want to do this?</h2>
   </hgroup>
   <article data-timings="">
-    <p>This could potentially have application in something like HFT, where a decently accurate prediction of a small incremental move in a security price, executed many times, could (possibly significantly) beat larger batch trades made on much more widely-spaced increments...</p>
+    <p>This could potentially have application in something like HFT, where a decently accurate prediction of a small incremental move in a security price, executed many times, could (possibly significantly) beat larger batch trades made on much more widely-spaced increments.</p>
 
-<p class='..or'>it could yield absolutely nothing of practical use, hence experimentation to see if it might!</p>
+<p>Alternatively, it could yield absolutely nothing of practical use, hence experimentation to see if it might!</p>
 
   </article>
   <!-- Presenter Notes -->
